--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "email": "lucacode1@gmail.com"
   },
   "devDependencies": {
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "@types/node": "^14.14.31"
   }
 }
